@@ -177,8 +177,12 @@ public class BankAccount extends Account {
 			double netMoney = amount - getTownDebt();
 			//Clear debt account
 			setTownDebt(0.0);
+			// Sometimes there's money in the bank account 
+			// (from a player manually putting money in via
+			// eco plugin, maybe.)
+			double bankBalance = TownyEconomyHandler.getBalance(getName(), getBukkitWorld());
 			//Set positive balance in regular account
-			TownyEconomyHandler.setBalance(getName(), netMoney, world);
+			TownyEconomyHandler.setBalance(getName(), bankBalance + netMoney, world);
 			return true;
 		} else {
 			setTownDebt(getTownDebt() - amount);
